fix: Update base path and URLs to match repository name (capital P)

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peddapudisiva.github.io/portfolio/" />
+    <meta property="og:url" content="https://peddapudisiva.github.io/Portfolio/" />
     <meta property="og:title" content="Siva Peddapudi | AI & ML Developer Portfolio" />
     <meta property="og:description"
         content="AI & ML Undergraduate building practical AI solutions through real-world projects." />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary" />
-    <meta property="twitter:url" content="https://peddapudisiva.github.io/portfolio/" />
+    <meta property="twitter:url" content="https://peddapudisiva.github.io/Portfolio/" />
     <meta property="twitter:title" content="Siva Peddapudi | AI & ML Developer Portfolio" />
     <meta property="twitter:description"
         content="AI & ML Undergraduate building practical AI solutions through real-world projects." />
@@ -32,7 +32,7 @@
     <!-- Additional SEO -->
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#00ff88" />
-    <link rel="canonical" href="https://peddapudisiva.github.io/portfolio/" />
+    <link rel="canonical" href="https://peddapudisiva.github.io/Portfolio/" />
 </head>
 
 <body>
